Adiciona exemplo de Content-Based Router com Choice
